--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.1.0",
+    "@angular/cdk": "^17.1.1",
     "@angular/common": "^17.1.0",
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.1.0",
@@ -27,6 +28,7 @@
     "bootswatch": "^5.3.2",
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
+    "ng-gallery": "^11.0.0",
     "ngx-bootstrap": "^12.0.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
