--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.0",
+    "@microsoft/signalr": "^8.0.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
