end of deployment

--- a/client/angular.json
+++ b/client/angular.json
@@ -27,6 +27,7 @@
                 "base": "../API/wwwroot",
                 "browser": ""
             },  
+            "allowedCommonJsDependencies": ["tough-cookie", "fetch-cookie", "ws", "eventsource", "whatwg-url", "encoding"],
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -65,7 +66,15 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "optimization": {
+                "scripts": true,
+                "styles": {
+                  "minify": true,
+                  "inlineCritical": false
+                },
+                "fonts": true
+              }
             },
             "development": {
               "optimization": false,
